samples/_failures_safe/1761729133_9896e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b79f2352.c: In function ‘main’:
./samples/SAFE/__tmp_b79f2352.c:148:28: error: missing terminating " character
  148 |                     printf("\
      |                            ^~
./samples/SAFE/__tmp_b79f2352.c:148:21: error: expected expression at end of input
  148 |                     printf("\
      |                     ^~~~~~
./samples/SAFE/__tmp_b79f2352.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b79f2352.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b79f2352.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b79f2352.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b79f2352.c:148:21: error: expected declaration or statement at end of input
